# study_langgraph

./: Azure OpenAI 사용법.ipynb  pyproject.toml
how_to_guide/tool_calling/: 1.How to call tools using ToolNode.ipynb  2.How to handle tool calling errors.ipynb
tutorials/Agent Architectures/: 1.Network.ipynb  2.Supervisor.ipynb
tutorials/Get Started/: 2.Workflows and Agents.ipynb
tutorials/Use Cases/ChatBots/Build a Customer Support Bot/: 1.Build a Customer Support Bot-Agent 스타일.ipynb  1.Build a Customer Support Bot.ipynb
