[project]
name = "study-langgraph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "langgraph-cli[inmem]>=0.2.8",
    "langgraph-supervisor>=0.0.20",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
]
